<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mesagez"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_mesagez" />
        <item
            android:id="@+id/nav_draftz"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_draftz" />
        <item
            android:id="@+id/nav_sentmesagez"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_sentmesagez" />
        <item
            android:id="@+id/nav_indatrash"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_indatrash" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
